--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -38,7 +38,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Bull Bitcoin | Costa Rica</title>
+    <title>Bull Bitcoin</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
